# nicegui

./: .dockerignore  .gitattributes  .gitignore  .pre-commit-config.yaml  .syncignore  AGENT.md  AGENTS.md  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CSP_TEST_COVERAGE.md  DEPENDENCIES.md  Dockerfile  LICENSE  README.md  REVIEW.md  SECURITY.md  _example.py  _fast_startup.py  _fast_startup_lazyload.py  _slow_startup.py  anchor_demo.py  api_docs_and_examples.py  api_reference.py  build_package.py  check.py  citation.cff  codemirror_test.py  custom_test.py  demo.py  deploy.py  deploy.sh  development.dockerfile  docker-compose.yml  docker-entrypoint.sh  docker.sh  elements.py  examples.py  extract_core_libraries.py  (+54 more)
.claude/commands/: fix-dependabot-alert.md  release-notes.md
.cursor/: rules
.cursor/commands/: explain.md  review-branch.md  review-uncommitted.md  simplify.md  summarize-branch.md
.cursor/rules/: coding.mdc  general.mdc
.devcontainer/: Dockerfile  devcontainer.json  install_chrome.sh  post-create.sh
.github/: FUNDING.yml  PULL_REQUEST_TEMPLATE.md  copilot-instructions.md  dependabot.yml
.github/DISCUSSION_TEMPLATE/: announcements.yml  general.yml  ideas.yml  q-a.yml  show-and-tell.yml
.github/ISSUE_TEMPLATE/: config.yml  issue.yml  report-an-issue.md
.github/instructions/: review.instructions.md
.github/scripts/: collect_failed_screenshots.py
.github/workflows/: _check.yml  _citation.yml  _docker.yml  _pypi.yml  _slack.yml  _test.yml  _verify.yml  ci-gate.yml  citation.yml  copilot-setup-steps.yml  docker.yml  fetch_sponsors.py  native_mode.yml  publish-on-tag.yml  publish.yml  python-publish.yml  reminder.yml  test-on-merge.yml  test-on-push.yml  test.yml  update_citation.py  update_citation.yml  update_colors.py  update_icons.py  update_pyproject.py  update_version.py
debug_timer/: main.py  nice_gui.py
examples/: README.md  csp_example.py  nicegui_demos.md  screenshot.py
examples/3d_scene/: README.md  main.py
examples/3d_scene_custom_objects/: README.md  dynamic_road.js  main.py  pulsing_sphere.js
examples/ai_interface/: README.md  main.py  requirements.txt
examples/altair/: main.py
examples/anywidget/: main.py
examples/api_requests/: README.md  main.py
examples/audio_record/: audio_recorder.py  audio_recorder.vue  main.py
examples/audio_recorder/: README.md  audio_recorder.py  audio_recorder.vue  main.py
examples/audio_video/: main.py
examples/authentication/: README.md  conftest.py  main.py  pytest.ini  session_info.py  test_authentication.py
examples/authentication_spa/: main.py
examples/carousel/: carousel_page.py  data.sql  db.sqlite3  main.py  recommend.py  requirements.txt
examples/chart_point_drag/: main.py
examples/chat_app/: README.md  conftest.py  main.py  test_chat_app.py
examples/chat_with_ai/: README.md  log_callback_handler.py  main.py  requirements.txt
examples/chat_with_ai_app/: main.py  requirements.txt
examples/chatgpt/: main.py  requirements.txt
examples/chips_on_blur/: README.md  main.py
examples/client_data/: main.py
examples/collaborative_editor/: README.md  main.py
examples/composed_3d_object/: main.py
examples/custom_binding/: README.md  main.py
examples/nicegui_ros2/ros2_ws/src/nicegui_ros2/: package.xml  setup.cfg  setup.py
examples/nicegui_ros2/ros2_ws/src/nicegui_ros2/nicegui_ros2/: basic_nicegui.py  joystick_nicegui.py
examples/ros2/ros2_ws/src/gui/: package.xml  setup.cfg  setup.py
examples/ros2/ros2_ws/src/gui/gui/: node.py
examples/ros2/ros2_ws/src/gui/launch/: main_launch.py
examples/ros2/ros2_ws/src/nicegui_ros2/: package.xml  setup.py
examples/ros2/ros2_ws/src/nicegui_ros2/nicegui_ros2/: nicegui_node.py
examples/ros2/ros2_ws/src/simulator/: package.xml  setup.cfg  setup.py
examples/ros2/ros2_ws/src/simulator/simulator/: node.py
nice_gui/: __init__.py  nice_gui.py  timer.py  ui.py
nicegui/: .syncignore  OutletView.py  __init__.py  _lazy.py  _worker_stubs.py  air.py  alignment.py  anchor.py  api_router.py  app.py  app_config.py  async_updater.py  auto_context.py  awaitable_response.py  background_tasks.py  binding.py  binding_nested.py  builder_utils.py  cache.py  classes.py  client.py  color.py  colors.py  config.py  content.py  content_view.py  context.py  core.py  dataclasses.py  defaults.py  dependencies.py  deprecation.py  desktop_mode.py  diagnostics.py  distributed.py  distributed_event.py  element.py  element_filter.py  error.py  event.py  (+91 more)
nicegui_run/: run.py
nicegui_webview/: __init__.py  window.py
release/: docker-compose.yml
spike_classes/: main.py  nice_gui.py  timer.py  ui.py
spike_reload/: main.py  nice_gui.py  test.py
temp_webview/: window.py
tests/: README.md  conftest.py  helper.py  input.py  pytest.ini  requirements.txt  screen.py  server.py  test_3d_scene.py  test_404page.py  test_add_html.py  test_aggrid.py  test_altair.py  test_alternate_ui_frameworks.py  test_anywidget.py  test_api_router.py  test_audio.py  test_auto_context.py  test_awaitable_response.py  test_background_tasks.py  test_binding.py  test_bindings.py  test_button.py  test_button_dropdown.py  test_button_group.py  test_button_toggle.py  test_caching.py  test_card.py  test_carousel.py  test_chart.py  test_chat.py  test_chat_message.py  test_chip.py  test_choice_element.py  test_client_lifecycle.py  test_client_state.py  test_clipboard.py  test_code.py  test_codemirror.py  test_codemirror_crdt.py  (+157 more)
vbuild_package/: README.md  changelog.md
website/: CLAUDE.md  __init__.py  anti_scroll_hack.py  api_docs_and_examples.py  build_search_data.py  build_search_index.py  check_translations.py  constants.py  demo.py  demo_card.py  design.py  documentation.py  documentation_pages.py  documentation_tools.py  example.py  example_card.py  examples.py  examples_page.py  fly.py  github_stars.py  header.py  i18n.py  imprint_privacy.py  intersection_observer.py  main.py  main_page.py  rate_limits.py  reference.py  reference_tools.py  search.py  seo.py  seo_constants.py  sponsors.json  sponsors.py  star.py  style.py  svg.py  translate.csv  utils.py
(+2599 files in other folders)
