[project]
name = "nicegui"
dynamic = ["version"]
description = "Create web-based user interfaces with Python. The nice way."
authors = [{ name = "Zauberzeug GmbH", email = "info@zauberzeug.com" }]
requires-python = ">=3.9,<4"
readme = "README.md"
license = "MIT"
keywords = [
    "gui",
    "ui",
    "web",
    "interface",
    "live",
]
dependencies = [
    "typing-extensions>=4.0.0",
    "markdown2>=2.4.7,!=2.4.11",
    "Pygments>=2.15.1,<3.0.0",
    "starlette>=0.49.1",
    "uvicorn[standard]>=0.22.0",
    "fastapi>=0.109.1,!=0.123.5",
    "python-socketio[asyncio-client]>=5.14.0",
    "jinja2>=3.1.6,<4",
    "python-multipart>=0.0.18",
    "orjson>=3.9.15 ; platform_machine != 'i386' and platform_machine != 'i686' and platform_python_implementation != 'PyPy'",
    "itsdangerous>=2.1.2,<3",
    "aiofiles>=23.1.0",
    "httpx>=0.24.0",
    "ifaddr>=0.2.0",
    "docutils>=0.19.0",
    "watchfiles>=0.18.1",
    "h11>=0.16.0",
    "python-engineio>=4.12.0",
    "aiohttp>=3.10.2",
    "certifi>=2024.07.04",
    "pydantic-core>=2.35.0",
]

[project.optional-dependencies]
native = ["pywebview>=5.0.1,<6"]
plotly = ["plotly>=5.13,<7.0"]
matplotlib = ["matplotlib>=3.5.0,<4"]
highcharts = ["nicegui-highcharts>=2.0.2,<3"]
redis = ["redis>=4.0.0"]

[project.urls]
Repository = "https://github.com/zauberzeug/nicegui"

[project.scripts]
nicegui-pack = "nicegui.scripts.pack:main"

[dependency-groups]
dev = [
    {include-group = "types"},
    {include-group = "website"},
    "autopep8>=1.5.7,<3.0.0",
    "debugpy>=1.3.0,<2",
    "pytest-selenium>=4.1.0,<5",
    "pytest-asyncio>=0.23.0",
    "pytest-watcher>=0.4.2,<0.5",
    "pytest-order>=1.3.0,<2",
    "pytest>=8.2.2,<9",
    "requests>=2.32.4",
    "urllib3>=1.26.18,!=2.0.0,!=2.0.1,!=2.0.2,!=2.0.3,!=2.0.4,!=2.0.5,!=2.0.6,!=2.0.7,!=2.1.0,!=2.2.0,!=2.2.1",
    "secure>=0.3.0",
    "webdriver-manager>=3.8.6,<5.0.0",
    "numpy>=1.26.0",
    "selenium>=4.11.2,<5",
    "ruff>=0.8.1",
    "pre-commit>=4.0.0",
    "mypy>=1.13.0,<2",
    "pylint>=3.3.1",
    "cssbeautifier>=1.15.4,<2",
    "rcssmin>=1.2.1,<2",
    "tinycss2>=1.4.0,<2",
    "poetry-dynamic-versioning>=1.8.0,<2",
]
types = [
    "types-aiofiles>=23.1.0",
    "pandas-stubs>=2.0.0,<3 ; python_version < '3.13'",
    "pandas-stubs>=2.2.3,<3 ; python_version >= '3.13' and python_version < '3.14'",
    "pandas-stubs>=2.3.2,<3 ; python_version >= '3.14'",
    "types-Pygments>=2.15.1,<3.0.0",
    "types-requests>=2.32.4",
]
website = [
    "html-sanitizer>=2.6.0,<3",
    "isort>=6.0.0,<7.0.0",
    "latex2mathml>=3.78.1,<4.0.0",
    "pandas>=2.0.0,<3 ; python_version < '3.13'",
    "pandas>=2.2.3,<3 ; python_version >= '3.13' and python_version < '3.14'",
    "pandas>=2.3.3,<3 ; python_version >= '3.14'",
    "polars>=1.12.0,<2",
    "pyecharts>=2.0.4,<3",
    "slowapi>=0.1.9,<0.2.0",
]

[build-system]
requires = [
    "poetry-core>=1.0.0",
    "poetry-dynamic-versioning>=1.0.0,<2.0.0",
]
build-backend = "poetry_dynamic_versioning.backend"

[tool.poetry]
version = "0.0.0"

[tool.poetry-dynamic-versioning]
enable = true
vcs = "git"
style = "pep440"

[tool.pytest.ini_options]
addopts = "--driver Chrome"
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
main_file = ""
testpaths = ["tests"]
filterwarnings = [
  'error',
  "ignore:'asyncio\\.iscoroutinefunction' is deprecated and slated for removal:DeprecationWarning",
]

[tool.mypy]
python_version = "3.9"
check_untyped_defs = true

[[tool.mypy.overrides]]
module = [
    "markdown2",
    "matplotlib.*",
    "nicegui_highcharts",
    "plotly.*",
    "polars.*",
    "pyecharts.*",
    "scipy.*",
    "socketio.*",
    "webview.*", # can be removed with next pywebview release
]
ignore_missing_imports = true

[tool.autopep8]
max-line-length = 120

[tool.ruff]
target-version = "py39"
indent-width = 4
line-length = 120

[tool.ruff.lint.flake8-quotes]
inline-quotes = "single"
multiline-quotes = "single"
docstring-quotes = "double"
avoid-escape = true

[tool.ruff.lint]
# See complete list: https://docs.astral.sh/ruff/rules/
select = [
    "I",  # isort
    "E",  # pycodestyle
    "W",  # pycodestyle
    "B",  # bugbear
    "F",  # pyflakes
    "UP", # pyupgrade
    "RUF", # ruff
    "PL", # pylint
    "Q", # flake8-quotes
]
fixable = [
    "I",  # isort
    "UP035", # deprecated import
    "RUF022", # `__all__` is not sorted
    "Q000",  # bad quotes inline string
    "Q001",  # bad quotes multiline string
    "Q002",  # bad quotes docstring
    "Q003",  # avoidable escaped quote
    "Q004",  # unnecessary escaped quote
]
ignore = [
    "E501", # line too long
    "PLC0415", # import outside top level
    "PLR0911", # too many return statements
    "PLR0912", # too many branches
    "PLR0913", # too many arguments
    "PLR0915", # too many statements
    "PLR2004", # magic value comparison
]
exclude = [
    "website/documentation/content/*",
]

[tool.pylint]
disable = [
    "C0103", # Invalid name (e.g., variable/function/class naming conventions)
    "C0114", # Missing module docstring
    "C0115", # Missing class docstring
    "C0301", # Line too long (exceeds character limit)
    "C0302", # Too many lines in module
    "R0801", # Similar lines in files
    "R0901", # Too many ancestors
    "R0902", # Too many instance attributes
    "R0903", # Too few public methods
    "R0904", # Too many public methods
    "R0911", # Too many return statements
    "R0912", # Too many branches
    "R0913", # Too many arguments
    "R0914", # Too many local variables
    "R0915", # Too many statements
    "R0917", # Too many positional arguments
    "R1705", # Unnecessary "else" after "return"
    "W0102", # Dangerous default value as argument
    "W0718", # Catching too general exception
    "W1203", # Use % formatting in logging functions
]

[tool.codespell]
skip = '*.min.js,*.min.js.map,*.prod.js,*.lock'
check-hidden = true
ignore-words-list = 'simpy'
